added grid to components

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="space-around center">
 
-        <mat-card fxFlex="25"class='example-card'>
+        <mat-card fxFlex="30"class='example-card'>
             <mat-card-header>
             Air Import
             </mat-card-header>
@@ -10,7 +10,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="25"class='example-card'>
+        <mat-card fxFlex="30"class='example-card'>
             <mat-card-header>
             Air Export
             </mat-card-header>
@@ -20,7 +20,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="25"class='example-card'>
+        <mat-card fxFlex="30"class='example-card'>
             <mat-card-header>
             Ocean Import
             </mat-card-header>
@@ -34,7 +34,7 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card fxFlex="30"class='example-card'>
         <mat-card-header>
         Customs Brokerage
         </mat-card-header>
@@ -44,17 +44,17 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card fxFlex="30"class='example-card'>
         <mat-card-header>
             Importer Security Filing
         </mat-card-header>
         <img mat-card-image src="https://cdn.pixabay.com/photo/2022/01/16/20/38/coffee-6943139__340.jpg" alt="Photo of a Shiba Inu">
         <mat-card-actions>
-            <button mat-raised-button color="success" routerLink="pages/isf">ISF</button>
+            <button mat-raised-button color="accent" routerLink="pages/isf">ISF</button>
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card fxFlex="30"class='example-card'>
         <mat-card-header>
             Air AMS
         </mat-card-header>
@@ -67,7 +67,7 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card fxFlex="30"class='example-card'>
         <mat-card-header>
         Truck AMS
         </mat-card-header>
@@ -77,7 +77,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card fxFlex="30"class='example-card'>
         <mat-card-header>
         Ocean Export
         </mat-card-header>
@@ -87,7 +87,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card fxFlex="30"class='example-card'>
         <mat-card-header>
             Sea AMS
         </mat-card-header>
