--- a/src/app/pages/ocean-export/ocean-export.component.html
+++ b/src/app/pages/ocean-export/ocean-export.component.html
@@ -31,7 +31,7 @@
       <mat-card-header>
         Liquidated Entries
       </mat-card-header>
-    </mat-card>  
+    </mat-card>
   </mat-tab>
   <mat-tab label="New Ocean Export">
     <app-ocean-export-detail></app-ocean-export-detail>
@@ -40,5 +40,5 @@
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
+<button type="button" class="btn btn-link" routerLink="/home/nav/">Back to Mainpage</button>
 
