--- a/src/app/home/dashboard/dashboard.component.scss
+++ b/src/app/home/dashboard/dashboard.component.scss
@@ -1,10 +1,11 @@
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
 
 .example-card {
     max-width: 400px;
+    max-height:fit-content ;
     margin: 10px 10px 10px 10px;
 }
 
@@ -12,9 +13,7 @@ mat-card-header {
   font-family: "Times New Roman", Times, serif;
   font-size: 2em ;
   font-weight: bolder;
-  margin-bottom: 10px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto auto auto auto;
 }
 
 mat-card-actions {
@@ -22,4 +21,8 @@ mat-card-actions {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+img {
+  margin-top: 20px;
 }
