--- a/src/app/pages/ocean-import/ocean-import.component.html
+++ b/src/app/pages/ocean-import/ocean-import.component.html
@@ -31,13 +31,13 @@
       <mat-card-header>
         Liquidated Entries
       </mat-card-header>
-    </mat-card>  
+    </mat-card>
   </mat-tab>
   <mat-tab label="New Ocean Import">
-    <app-ocean-import-detail></app-ocean-import-detail>  
+    <app-ocean-import-detail></app-ocean-import-detail>
   </mat-tab>
   <mat-tab label="Third">Content 3</mat-tab>
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
+<button type="button" class="btn btn-link" routerLink="/home/nav/">Back to Mainpage</button>
