--- a/src/app/pages/parties/parties.component.html
+++ b/src/app/pages/parties/parties.component.html
@@ -15,4 +15,4 @@
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
+<button type="button" class="btn btn-link" routerLink="/home/nav/">Back to Mainpage</button>
