--- a/src/app/pages/air-import/air-import.component.html
+++ b/src/app/pages/air-import/air-import.component.html
@@ -1,6 +1,10 @@
 <h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Air Import</h1>
 
 <mat-tab-group mat-align-tabs="start">
+
+<mat-tab style="background-color:green" label="Air Import Grid">
+  <app-ai-grid></app-ai-grid>
+</mat-tab>
   <mat-tab>
     <ng-template mat-tab-label>
       <span class="my-tab-class">Ports</span>
