--- a/src/app/pages/ocean-export/ocean-export.component.html
+++ b/src/app/pages/ocean-export/ocean-export.component.html
@@ -1,6 +1,9 @@
 <h1 style="max-width: 100%; max-height: 100%">Ocean Export Works</h1>
 
 <mat-tab-group mat-align-tabs="start">
+  <mat-tab label="Ocean Export Grid">
+    <app-oe-grid></app-oe-grid>
+  </mat-tab>
   <mat-tab label="First">
     <mat-card>
       <mat-card-header>
