--- a/src/app/pages/ocean-import/ocean-import.component.html
+++ b/src/app/pages/ocean-import/ocean-import.component.html
@@ -1,6 +1,10 @@
 <h1 style="max-width: 100%; max-height: 100%">Ocean Import Works</h1>
 
 <mat-tab-group mat-align-tabs="start">
+  <mat-tab label="Ocean Import Grid">
+    <app-oi-grid></app-oi-grid>
+  </mat-tab>
+
   <mat-tab label="First">
     <mat-card>
       <mat-card-header>
