Updated entry detail component

--- a/src/app/pages/customs-brokerage/entry-detail/entry-detail.component.html
+++ b/src/app/pages/customs-brokerage/entry-detail/entry-detail.component.html
@@ -1,16 +1,16 @@
 <div class="page-header">
   <h3 class="page-title">
-    Form elements
+    Entry Screen
   </h3>
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="javascript:;">Forms</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Form elements</li>
+      <li class="breadcrumb-item"><a href="javascript:;">Shipment Details</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Invoice Details</li>
     </ol>
   </nav>
 </div>
 <div class="row">
-  <div class="col-md-6 grid-margin stretch-card">
+  <div class="col-md-4 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Default form</h4>
@@ -48,7 +48,7 @@
     </div>
   </div>
 
-  <div class="col-md-6 grid-margin stretch-card">
+  <div class="col-md-4 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Horizontal Form</h4>
@@ -100,6 +100,61 @@
     </div>
   </div>
 
+  <div class="col-md-4 grid-margin stretch-card">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Horizontal Form</h4>
+        <p class="card-description">
+          Horizontal form layout
+        </p>
+        <form class="forms-sample">
+          <div class="form-group row">
+            <label for="exampleInputUsername2" class="col-sm-3 col-form-label">Email</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="exampleInputUsername2" placeholder="Username">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="exampleInputEmail2" class="col-sm-3 col-form-label">Email</label>
+            <div class="col-sm-9">
+              <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="exampleInputMobile" class="col-sm-3 col-form-label">Mobile</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="exampleInputMobile" placeholder="Mobile number">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="exampleInputPassword2" class="col-sm-3 col-form-label">Password</label>
+            <div class="col-sm-9">
+              <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="exampleInputConfirmPassword2" class="col-sm-3 col-form-label">Re Password</label>
+            <div class="col-sm-9">
+              <input type="password" class="form-control" id="exampleInputConfirmPassword2" placeholder="Password">
+            </div>
+          </div>
+          <div class="form-check form-check-flat form-check-primary">
+            <label class="form-check-label">
+              <input type="checkbox" class="form-check-input">
+              Remember me
+              <i class="input-helper"></i>
+            </label>
+          </div>
+          <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
+          <button class="btn btn-light">Cancel</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+  
 
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
