Added envconfig files to assets folder

--- a/src/app/pages/customs-brokerage/entry-detail/entry-detail.component.html
+++ b/src/app/pages/customs-brokerage/entry-detail/entry-detail.component.html
@@ -51,39 +51,39 @@
   <div class="col-md-4 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Horizontal Form</h4>
+        <h4 class="card-title">Dates</h4>
         <p class="card-description">
-          Horizontal form layout
+          Important Dates
         </p>
         <form class="forms-sample">
           <div class="form-group row">
-            <label for="exampleInputUsername2" class="col-sm-3 col-form-label">Email</label>
+            <label for="exampleInputUsername2" class="col-sm-3 col-form-label">Loading</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="exampleInputUsername2" placeholder="Username">
+              <input type="date" class="form-control" id="exampleInputUsername2" placeholder="Loading Date">
             </div>
           </div>
           <div class="form-group row">
-            <label for="exampleInputEmail2" class="col-sm-3 col-form-label">Email</label>
+            <label for="exampleInputEmail2" class="col-sm-3 col-form-label">Export</label>
             <div class="col-sm-9">
-              <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email">
+              <input type="date" class="form-control" id="exampleInputEmail2" placeholder="Export Date">
             </div>
           </div>
           <div class="form-group row">
-            <label for="exampleInputMobile" class="col-sm-3 col-form-label">Mobile</label>
+            <label for="exampleInputMobile" class="col-sm-3 col-form-label">Import</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="exampleInputMobile" placeholder="Mobile number">
+              <input type="date" class="form-control" id="exampleInputMobile" placeholder="Import Date">
             </div>
           </div>
           <div class="form-group row">
-            <label for="exampleInputPassword2" class="col-sm-3 col-form-label">Password</label>
+            <label for="exampleInputPassword2" class="col-sm-3 col-form-label">Arrival</label>
             <div class="col-sm-9">
-              <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+              <input type="date" class="form-control" id="exampleInputPassword2" placeholder="Arrival Date">
             </div>
           </div>
           <div class="form-group row">
-            <label for="exampleInputConfirmPassword2" class="col-sm-3 col-form-label">Re Password</label>
+            <label for="exampleInputConfirmPassword2" class="col-sm-3 col-form-label">Entry</label>
             <div class="col-sm-9">
-              <input type="password" class="form-control" id="exampleInputConfirmPassword2" placeholder="Password">
+              <input type="date" class="form-control" id="exampleInputConfirmPassword2" placeholder="Entry Date">
             </div>
           </div>
           <div class="form-check form-check-flat form-check-primary">
@@ -154,7 +154,7 @@
 
 
 
-  
+
 
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
