--- a/src/app/pages/air-export/air-export.component.html
+++ b/src/app/pages/air-export/air-export.component.html
@@ -1,5 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">Air Export</h1>
-
+<h1 style="font-weight: bolder; background-color: rgb(43, 255, 0); text-align: center;">Air Export</h1>
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Air Export Summary">
     <app-export-summary></app-export-summary>
