--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,4 +1,4 @@
-<h1>Reports </h1>
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Various Reports</h1>
 <nav>
   <a routerLink="entry" routerLinkActive="active">Entry List</a>
   <a routerLink="liquidation" routerLinkActive="active">Liquidation</a>
