--- a/src/app/pages/sea-ams/sea-ams.component.html
+++ b/src/app/pages/sea-ams/sea-ams.component.html
@@ -1,4 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">Sea AMS</h1>
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Sea AMS</h1>
 
 <mat-tab-group mat-align-tabs="start" style="color:pink;">
   <mat-tab label="Sea AMS Summary" >
