--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -1,4 +1,4 @@
-<h1>Tables </h1>
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Tables</h1>
 <nav>
   <a routerLink="carriers" routerLinkActive="active">Carriers</a>
   <a routerLink="ports" routerLinkActive="active">Ports</a>
