--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="space-around center">
 
-        <mat-card fxFlex="30"class='example-card'>
+        <mat-card fxFlex="25"class='example-card'>
             <mat-card-header>
             Air Import
             </mat-card-header>
@@ -10,7 +10,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="30"class='example-card'>
+        <mat-card fxFlex="25"class='example-card'>
             <mat-card-header>
             Air Export
             </mat-card-header>
@@ -20,7 +20,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="30"class='example-card'>
+        <mat-card fxFlex="25"class='example-card'>
             <mat-card-header>
             Ocean Import
             </mat-card-header>
@@ -30,21 +30,21 @@
             </mat-card-actions>
         </mat-card>
 
+        <mat-card fxFlex="25"class='example-card'>
+            <mat-card-header>
+            Customs Brokerage
+            </mat-card-header>
+            <img mat-card-image src="https://cdn.pixabay.com/photo/2022/01/11/17/04/city-6931092__340.jpg" alt="Photo of a Shiba Inu">
+            <mat-card-actions>
+                <button mat-raised-button color="primary" routerLink="pages/customsBrokerage">CHB</button>
+            </mat-card-actions>
+        </mat-card>
 
 </div>
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
-    <mat-card fxFlex="30"class='example-card'>
-        <mat-card-header>
-        Customs Brokerage
-        </mat-card-header>
-        <img mat-card-image src="https://cdn.pixabay.com/photo/2022/01/11/17/04/city-6931092__340.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-actions>
-            <button mat-raised-button color="primary" routerLink="pages/customsBrokerage">CHB</button>
-        </mat-card-actions>
-    </mat-card>
-
-    <mat-card fxFlex="30"class='example-card'>
+   
+    <mat-card fxFlex="25"class='example-card'>
         <mat-card-header>
             Importer Security Filing
         </mat-card-header>
@@ -54,7 +54,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="30"class='example-card'>
+    <mat-card fxFlex="25"class='example-card'>
         <mat-card-header>
             Air AMS
         </mat-card-header>
@@ -64,10 +64,7 @@
         </mat-card-actions>
     </mat-card>
 
-</div>
-
-<div fxLayout="row" fxLayoutAlign="space-around center">
-    <mat-card fxFlex="30"class='example-card'>
+    <mat-card fxFlex="25"class='example-card'>
         <mat-card-header>
         Truck AMS
         </mat-card-header>
@@ -77,7 +74,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="30"class='example-card'>
+    <mat-card fxFlex="25"class='example-card'>
         <mat-card-header>
         Ocean Export
         </mat-card-header>
@@ -87,7 +84,12 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="30"class='example-card'>
+</div>
+
+<div fxLayout="row" fxLayoutAlign="space-around center">
+    
+
+    <mat-card fxFlex="25"class='example-card'>
         <mat-card-header>
             Sea AMS
         </mat-card-header>
@@ -97,4 +99,34 @@
         </mat-card-actions>
     </mat-card>
 
+    <mat-card fxFlex="25"class='example-card'>
+        <mat-card-header>
+            Trucking
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2020/04/13/09/07/royal-mile-5037397__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="warn" routerLink="pages/trucking">Trucking</button>
+        </mat-card-actions>
+    </mat-card>
+
+    <mat-card fxFlex="25"class='example-card'>
+        <mat-card-header>
+        Reports
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2022/01/16/13/25/cityscape-6942013__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="primary" routerLink="pages/reports">Reports</button>
+        </mat-card-actions>
+    </mat-card>
+
+    <mat-card fxFlex="25"class='example-card'>
+        <mat-card-header>
+        Track And Trace
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2021/10/02/07/40/ink-6674441__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="accent" routerLink="pages/trackAndTrace">Track & Trace</button>
+        </mat-card-actions>
+    </mat-card>
+    
 </div>
