--- a/src/app/pages/air-ams/air-ams.component.html
+++ b/src/app/pages/air-ams/air-ams.component.html
@@ -1,4 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">Air AMS</h1>
+<h1 style="font-weight: bolder; background-color: rgb(0, 183, 255); text-align: center;">Air AMS</h1>
 
 <mat-tab-group mat-align-tabs="start" style="color:pink;">
 
