--- a/src/app/pages/customs-brokerage/customs-brokerage.component.html
+++ b/src/app/pages/customs-brokerage/customs-brokerage.component.html
@@ -1,5 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">Customs Brokerage Works</h1>
-
+<h1 style="font-weight: bolder; background-color: rgb(225, 227, 235); text-align: center;">Customs Brokerage</h1>
 <mat-tab-group mat-align-tabs="start">
 
   <mat-tab label="Entry Grid">
