--- a/src/app/pages/isf/isf.component.html
+++ b/src/app/pages/isf/isf.component.html
@@ -1,4 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">ISF Works</h1>
+<h1 style="font-weight: bolder; background-color: rgb(255, 0, 170); text-align: center;">Importer Security Filing</h1>
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Shipment Information">
