--- a/src/app/pages/ocean-export/ocean-export.component.html
+++ b/src/app/pages/ocean-export/ocean-export.component.html
@@ -1,4 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">Ocean Export Works</h1>
+<h1 style="font-weight: bolder; background-color: rgb(209, 209, 193); text-align: center;">Ocean Export</h1>
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Ocean Export Grid">
