--- a/src/app/pages/ocean-import/ocean-import.component.html
+++ b/src/app/pages/ocean-import/ocean-import.component.html
@@ -1,4 +1,5 @@
-<h1 style="max-width: 100%; max-height: 100%">Ocean Import Works</h1>
+
+<h1 style="font-weight: bolder; background-color: rgb(139, 139, 136); text-align: center;">Air Import</h1>
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Ocean Import Grid">
