--- a/src/app/pages/parties/parties.component.html
+++ b/src/app/pages/parties/parties.component.html
@@ -1,4 +1,5 @@
-<h1 style="max-width: 100%; max-height: 100%">Parties Works</h1>
+
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Parties</h1>
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Carriers">
