--- a/src/app/pages/track-and-trace/track-and-trace.component.html
+++ b/src/app/pages/track-and-trace/track-and-trace.component.html
@@ -1,4 +1,5 @@
-<p>track-and-trace works!</p>
+
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Track And Trace</h1>
 <div class="bold">
 
 </div>
