--- a/src/app/pages/truck-ams/truck-ams.component.html
+++ b/src/app/pages/truck-ams/truck-ams.component.html
@@ -1,4 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">Truck AMS</h1>
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Truck AMS</h1>
 
 <mat-tab-group mat-align-tabs="start" style="color:pink;">
   <mat-tab label="Truck AMS Summary" >
