--- a/src/app/pages/trucking/trucking.component.html
+++ b/src/app/pages/trucking/trucking.component.html
@@ -1,5 +1,4 @@
-<h1>Trucking Dashboard </h1>
-<nav>
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Trucking Dashboard</h1><nav>
   <a routerLink="air" routerLinkActive="active">Air Delivery</a>
   <a routerLink="lcl" routerLinkActive="active">LCL Delivery</a>
   <a routerLink="fcl" routerLinkActive="active">FCL Delivery</a>
