--- a/src/app/pages/trucking/trucking.component.html
+++ b/src/app/pages/trucking/trucking.component.html
@@ -7,33 +7,141 @@
 <router-outlet></router-outlet>
 
 <mat-card>
-  <mat-card-header>
-    List of Entries
-  </mat-card-header>
+  <mat-card-title>Air Delivery</mat-card-title>
+  <mat-card-content>
+    <table class="table table-info table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Handle</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td colspan="2">Larry the Bird</td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
+  </mat-card-content>
 </mat-card>
+
 <mat-card>
-  <mat-card-header>
-    Entries Under Exam
-  </mat-card-header>
+  <mat-card-title>LCL Delivery </mat-card-title>
+  <mat-card-content>
+    <table class="table table-secondary table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Handle</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td colspan="2">Larry the Bird</td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
+  </mat-card-content>
 </mat-card>
-<mat-card>
-  <mat-card-header>
-    Entries with PGA Hold
-  </mat-card-header>
+
+<mat-card> <mat-card-title>FCL Delivery</mat-card-title>
+  <mat-card-content>
+    <table class="table table-success">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Handle</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td colspan="2">Larry the Bird</td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
+  </mat-card-content>
 </mat-card>
+
 <mat-card>
-  <mat-card-header>
-    Entries Past Arrival Dates
-  </mat-card-header>
+  <mat-card-title>Special Delivery </mat-card-title>
+  <mat-card-content>
+    <table class="table table-primary">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Handle</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td colspan="2">Larry the Bird</td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
+  </mat-card-content>
 </mat-card>
-<mat-card>
-  <mat-card-header>
-    Duty Payments Due
-  </mat-card-header>
-</mat-card>
-<mat-card>
-  <mat-card-header>
-    Liquidated Entries
-  </mat-card-header>
-</mat-card>  
 
