--- a/src/app/pages/tables/country/country.component.html
+++ b/src/app/pages/tables/country/country.component.html
@@ -1,3 +1,5 @@
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Country Tables</h1>
+
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <!-- Id Column -->
