update navigation comp

--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -8,7 +8,15 @@
     <!-- *ngIf="isHandset$ | async"> -->
     <mat-icon>menu</mat-icon>
   </button>
-  <span class="name1">ANA Link, Ltd</span>
+  <span class="name1">ANA Link</span>
+
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+   <mat-icon>share</mat-icon>
+ </button>
 
   <span class="toolbar-filler"></span>
   <a routerLink="/"><button id="button-logout" type="button" class="btn btn-warning" >Log Out</button> </a>
