--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -99,4 +99,9 @@ h3, mat-icon {
 
 img {
   background-color: rgb(20, 72, 216) ;
+  border-radius: 50%;
+}
+
+example-spacer {
+  flex: 1 1 auto;
 }
