--- a/src/app/account/auth/login02/login02.component.scss
+++ b/src/app/account/auth/login02/login02.component.scss
@@ -114,3 +114,12 @@ body {
 .wrapper {
   background-image: url('https://cdn.pixabay.com/photo/2022/01/13/16/37/trees-6935614__340.jpg') ;
 }
+
+background-image {
+  background-size: cover;
+}
+
+li {
+  margin: 15px
+}
+
