--- a/src/app/pages/air-ams/ams-detail/ams-detail.component.html
+++ b/src/app/pages/air-ams/ams-detail/ams-detail.component.html
@@ -8,8 +8,10 @@
         <li class="breadcrumb-item active" aria-current="page">Form elements</li>
       </ol>
     </nav>
-  </div>
-  <div class="row">
+ </div>
+
+<div class="container"> 
+ <div class="row">
     <div class="col-md-6 grid-margin stretch-card">
       <div class="card">
         <div class="card-body">
@@ -640,3 +642,4 @@
       </div>
     </div>
   </div>
+</div>  
